--- a/order-service.yml
+++ b/order-service.yml
@@ -1,9 +1,15 @@
 server:
   port: 8082
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/demodb2
     username: postgres
     password: realmadrid1
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
 
